# ua-dealer-intel

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_scraper.yml
data/: seed_companies.csv  seed_urls.csv
outputs/: run_log.txt  ua_dealer_targets.csv  ua_dealer_targets.xlsx
src/ua_dealer_intel/: __init__.py  cli.py  constants.py  discovery.py  exporters.py  extraction.py  geo.py  google_sheets.py  io_utils.py  models.py  pipeline.py  scoring.py  scraper.py  utils.py
src/ua_dealer_intel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_discovery.py  test_extraction.py  test_geo.py  test_pipeline.py  test_scoring.py  test_scraper.py
